[package]
name = "mydogchase"
version = "0.1.1"
authors = ["Brian Seymour <imbrianseymour@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.1"
rand = "0.8.5"
alphanumeric-sort = "1.5.3"
[dependencies.rocket_dyn_templates]
version = "0.2.0"
default-features = true
features = ["handlebars"]
